# xrshowmaster

./: BUILD_GUIDE.md  README.md  build.bat  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
